fixing hero clipping

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -428,7 +428,6 @@ nav a:active:hover, .active:hover {
 #hero {
     margin-bottom: 25px;
     height: 400px;
-    width: 100%;
     margin-bottom: 25px;
     overflow: hidden;
     overflow: clip; /* required */
